--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -544,6 +544,45 @@ rt_stations_f23 %>%
   write.csv('data/cleaned/stations_routes_f23_walk_scores.csv', row.names=FALSE)
 ```
 
+# Geography
+
+```{r}
+rt_stations_f23 <- read.csv('data/cleaned/stations_routes_f23.csv')
+rt_stations_f19 <- read.csv('data/cleaned/stations_routes_f19.csv')
+```
+
+```{r}
+library(sf)
+
+bos <- st_read('data/boston_boundary/City_of_Boston_Boundary_(Water_Included).shp')
+```
+
+```{r}
+calc_geog_metrics <- function(rt_stations_df) {
+  station_points <- rt_stations_df %>%
+    st_as_sf(coords = c("stop_lon","stop_lat"), crs=4326)
+  
+  station_points$in_bos <- station_points %>%
+    st_intersects(bos %>% st_transform(4326)) %>%
+    as.logical() %>% replace_na(0) %>% as.numeric()
+  
+  cbd <- st_sfc(st_point(c(-71.061418, 42.354919))) %>% 
+    st_set_crs(4326)
+  
+  station_points$km_from_cbd <- station_points %>%
+    st_distance(cbd) %>% as.numeric() / 1000
+  
+  station_points %>%
+    st_drop_geometry() %>%
+    select(-stop_name)
+}
+
+rt_stations_f23 %>% calc_geog_metrics() %>% 
+  write.csv('data/cleaned/stations_routes_f23_geog_vars.csv', row.names=FALSE)
+rt_stations_f19 %>% calc_geog_metrics() %>% 
+  write.csv('data/cleaned/stations_routes_f19_geog_vars.csv', row.names=FALSE)
+```
+
 # College Locations & Enrollments (IPEDS)
 
 2023 and 2019 data download links and data dictionaries available from https://nces.ed.gov/ipeds/datacenter/DataFiles.aspx?gotoReportId=7&fromIpeds=true 
