--- a/model_building.Rmd
+++ b/model_building.Rmd
@@ -34,7 +34,9 @@ get_model_data <- function(season) {
   left_join(get_dataset(paste(season, 'ridership', sep='_')), by=c('route_id', 'parent_station')) %>%
   mutate(
     transfer = case_when(stop_name %in% xfer_station_names ~ 1, .default=0),
-    devl_mix = tot_jobs/(tot_pop + tot_jobs)
+    devl_mix = tot_jobs/(tot_pop + tot_jobs),
+    avg_median_inc_1000s = avg_median_inc/1000,
+    .keep='unused'
     ) %>%
   mutate(route=1, route_id_temp = route_id) %>% # this creates dummy variables for each route
   pivot_wider(names_from='route_id_temp', values_from='route', values_fill=0)
@@ -46,12 +48,36 @@ model_data_f19 <- get_model_data('f19')
 
 ## Descriptive Statistics
 
+```{r}
+continuous_vars <- c('avg_boardings', 'avg_headway', 'avg_tt', 'walk_score', 'km_from_cbd', 
+                     'avg_median_inc_1000s', 'ppsqft', 'jobspersqft', 'devl_mix')
+sparse_vars <- c('connecting_bus_routes', 'connecting_bus_riders', 'connecting_cr_routes', 'pnr_spaces')
+dummy_vars <- c('Red', 'Orange', 'Green', 'Blue', 'transfer', 'in_bos')
+
+
+numeric_data <- model_data_f23 %>% select(c(continuous_vars, sparse_vars))
+summary(numeric_data) # minimum, median, mean, maximum, and interquartile range for each variable
+```
+
+For dummy variables (0 or 1), show what number and percent of observations do the 1's represent
+```{r}
+model_data_f23 %>% summarise(across(all_of(dummy_vars), list(num = sum, pct = mean)))
+```
+
 Histograms of continuous variables
 ```{r}
-c('avg_boardings', 'avg_headway', 'avg_tt', 'walk_score', 'km_from_cbd',  
-  'avg_median_inc', 'ppsqft', 'jobspersqft', 'devl_mix') %>% 
+continuous_vars %>% 
   lapply(function(var) hist(
     model_data_f23[[var]], breaks='Sturges', 
+    main=paste('Histogram of', var), xlab=paste('Value of', var)
+    )) %>% invisible()
+```
+
+Histograms of non-zero values for sparse variables (variables with mostly 0s)
+```{r}
+sparse_vars %>%
+  lapply(function(var) hist(
+    model_data_f23[[var]] %>% {.[. != 0]}, breaks='Sturges', 
     main=paste('Histogram of', var), xlab=paste('Value of', var)
     )) %>% invisible()
 ```
@@ -59,16 +85,25 @@ c('avg_boardings', 'avg_headway', 'avg_tt', 'walk_score', 'km_from_cbd',
 ## Model Building
 
 ```{r}
-model <- model_data_f23 # %>% filter(in_bos == 1) # uncomment this to do Boston-only model
+basic_reg <- function(model) {
+  lm(avg_boardings ~ walk_score + pnr_spaces + connecting_cr_routes
+     + connecting_bus_riders + avg_headway + avg_tt + transfer # + sd_tt
+     + Red + Orange + Blue + km_from_cbd
+     + avg_median_inc_1000s #+ tot_jobs + tot_pop 
+     + ppsqft + jobspersqft #+ devl_mix
+     , data=model)
+}
 
-basic_reg <- lm(avg_boardings ~ walk_score + pnr_spaces + connecting_cr_routes
-                + connecting_bus_riders + avg_headway + avg_tt + transfer
-                + Red + Orange + Blue + km_from_cbd
-                + avg_median_inc #+ tot_jobs + tot_pop 
-                + ppsqft + jobspersqft #+ devl_mix
-                , data=model)
+reg_f23 <- model_data_f23 %>% 
+  # filter(in_bos == 1) %>% # uncomment this to do Boston-only model
+  basic_reg() %>% summary()
 
-summary(basic_reg)
+reg_f19 <- model_data_f19 %>% 
+  # filter(in_bos == 1) %>% # uncomment this to do Boston-only model
+  basic_reg() %>% summary()
+
+reg_f19$coefficients %>% cbind(reg_f23$coefficients) %>% round(2)
+reg_f19$adj.r.squared %>% cbind(reg_f23$adj.r.squared)
 ```
 
 ```{r}
@@ -91,7 +126,5 @@ plot_y_yhat_w_labels(model$avg_boardings, predict(basic_reg), '')
 plot_y_yhat_w_labels(log(model$avg_boardings), log(predict(basic_reg)), 'Logged')
 ```
 
-```{r}
-
-```
+# TODO: take a preferred specification and do cross-validation 
 
